--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/react": "4.0.0",
+    "@astrojs/react": "4.1.0",
     "@astrojs/tailwind": "5.1.3",
     "@radix-ui/react-navigation-menu": "^1.2.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "astro": "5.0.3",
+    "astro": "5.0.5",
+    "astro-icon": "^1.1.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
