--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/react": "4.1.0",
     "@astrojs/tailwind": "5.1.3",
+    "@radix-ui/colors": "^3.0.0",
+    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-navigation-menu": "^1.2.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -20,12 +23,14 @@
     "astro-icon": "^1.1.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-motion": "^1.0.0",
     "typescript": "^5.6.3"
   }
 }
