--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/react": "4.1.0",
     "@astrojs/tailwind": "5.1.3",
+    "@google/model-viewer": "^4.0.0",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-icons": "^1.3.2",
@@ -32,6 +33,7 @@
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-motion": "^1.0.0",
+    "three": "^0.171.0",
     "typescript": "^5.6.3"
   }
 }
