--- a/package.json
+++ b/package.json
@@ -13,34 +13,37 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/react": "4.1.6",
     "@astrojs/tailwind": "5.1.5",
-    "@google/model-viewer": "^4.0.0",
+    "@google/model-viewer": "^4.1.0",
     "@radix-ui/colors": "^3.0.0",
-    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-navigation-menu": "^1.2.3",
-    "@radix-ui/react-popover": "^1.1.6",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@radix-ui/react-navigation-menu": "^1.2.10",
+    "@radix-ui/react-popover": "^1.1.11",
+    "@react-three/drei": "^10.0.7",
+    "@react-three/fiber": "^9.1.2",
+    "@types/react": "^18.3.20",
+    "@types/react-dom": "^18.3.6",
+    "@types/three": "^0.176.0",
     "astro": "5.1.8",
     "astro-icon": "^1.1.5",
-    "caniuse-lite": "^1.0.30001713",
+    "caniuse-lite": "^1.0.30001715",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.468.0",
-    "ollama": "^0.5.13",
-    "prettier": "^3.4.2",
+    "ollama": "^0.5.15",
+    "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
-    "radix-ui": "^1.1.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "radix-ui": "^1.3.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "tailwindcss-motion": "^1.0.1",
-    "three": "^0.171.0",
-    "typescript": "^5.7.3"
+    "tailwindcss-motion": "^1.1.0",
+    "three": "^0.176.0",
+    "typescript": "^5.8.3"
   }
 }
